--- a/blog123/blog.jmatter/package.json
+++ b/blog123/blog.jmatter/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "jwt-decode": "^3.1.2",
     "mui": "^0.0.1",
+    "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
