--- a/blog123/blog.jmatter/package.json
+++ b/blog123/blog.jmatter/package.json
@@ -9,6 +9,7 @@
     "@hookform/resolvers": "^3.1.0",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.134",
     "@mui/material": "^5.13.2",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-data-grid": "^6.6.0",
@@ -56,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@iconify/react": "^4.1.0"
   }
 }
