--- a/blog123/blog.jmatter/package.json
+++ b/blog123/blog.jmatter/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
+    "rehype-raw": "^6.1.1",
     "styled-components": "^5.3.10",
     "toast": "^0.5.4",
     "web-vitals": "^2.1.4",
