--- a/Shop_oto/shop-car/package.json
+++ b/Shop_oto/shop-car/package.json
@@ -13,11 +13,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "google-maps-react": "^2.0.6",
     "navigate": "^0.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "react-swipeable-views": "^0.14.0",
+    "react-swipeable-views-utils": "^0.14.0",
     "redux": "^4.2.1",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
